# pysume

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml  tox.ini
input/: .gitignore  config.EXAMPLE.yml
output/: .gitignore
output/html.EXAMPLE/: index.html  style.css
src/pysume/: resume.py
src/pysume/config/: config.py
src/pysume/static/html/: style.css
src/pysume/template/html/: index.html
